@@ -1,5 +1,11 @@
 2002-07-08  James Henstridge  <james@daa.com.au>
 
+	* pygobject.c (pygobject_connect): apply another memory leak fix
+	from Arjan (from bug #87413).
+	(pygobject_connect_after): equivalent fix here.
+	(pygobject_connect_object): and here.
+	(pygobject_connect_object_after): and here.
+
 	* gtk/gtk-types.c (PyGdkRectangle_to_value): add custom boxed
 	handlers for GDK_TYPE_RECTANGLE, so that 4-sequences can
 	automatically be marshaled to GdkRectangle values.
